package domain.enums;

public enum CPUSocket {

    AM3,AM4,AM5,LGA1700,LGA1200
}
