package domain.enums;

public enum CoolerType {

    WATER,AIR
}
