package domain.enums;

public enum RamSocketType {

    DRR3,DDR3,DDR5
}
