package domain.enums;

public enum SizeType {

    EATX,ATX,MINI_ITX
}
