package domain.enums;

public enum StorageType {
    SSD,HDD
}
