package elte.project.pcbuilder.domain.enums;

public enum CPUType {
    AMD,INTEL
}
