package elte.project.pcbuilder.domain.enums;

public enum GPUSeries {
    RX7000,RX6000,RX5000,RTX40,RTX30,RTX20,GTX10
}
