package elte.project.pcbuilder.domain.enums;

public enum GPUType {
    AMD,NVIDIA,INTEL
}
