@startuml
class User {
id : int
firstName : String
lastName : String
email : String
phoneNumber : String
role : String
Getters() and Setters()
}

class Cart {
id : int
Getters() and Setters()
}

class Order {
id : int
Getters() and Setters()
}

abstract class PCComponent {
id : int
name : String
brand : String
price : BigDecimal
Getters() and Setters()
}


Motherboard --> "1" SizeType
Case --> "1..*" SizeType
RAM --> "1" RamSocketType
Motherboard  --> "1" RamSocketType
Storage  --> "1" StorageType
CPUCooler --> "1" CoolerType
CPU --> "1" CPUSocket
Motherboard --> "1" CPUSocket
GPU --> "1" GPUType
GPU --> "1" GPUSeries
CPUCooler --> "1..*" CPUSocket
CPU --> "1" CPUType
Order --> OrderStatus


User --* "1" Cart
User "0..*" --o "1" Order
Order "1..*" --o PCComponent
Cart "0..*" --o PCComponent
User --* "1" UserCredentials

class Motherboard extends PCComponent {
chipset : String
Getters() and Setters()
}

class RAM extends PCComponent {
timings : String
speed : int
size : int
Getters() and Setters()
}

class CPU extends PCComponent {
cores : int
threads : int
coreSpeed : int
maxCoreSpeed : int
Getters() and Setters()
}


class GPU extends PCComponent {
clockSpeed : int
memorySize : int
Getters() and Setters()
}


class Storage extends PCComponent {
size : int
writingSpeed : int
readingSpeed : int
Getters() and Setters()
}

class Case extends PCComponent {
Getters() and Setters()
}

class CPUCooler extends PCComponent {
noise : int
radius : int
speed : int
Getters() and Setters()
}

class PSU extends PCComponent {
rating : String
performance : int
Getters() and Setters()
}

class UserCredentials {
id : int
username : String
password : String
Getters() and Setters()
}

enum SizeType {
EATX : SizeType
ATX : SizeType
MINI-ITX : SizeType
SizeType()
}

enum StorageType {
SSD : StorageType
HDD : StorageType
StorageType()
}

enum CoolerType {
WATER : CoolerType
AIR : CoolerType
CoolerType()
}

enum RamSocketType {
DDR3 : RamSocketType
DDR4 : RamSocketType
DDR5 : RamSocketType
RamSocketType()
}

enum CPUType {
AMD : CPUType
INTEL : CPUType
CPUType()
}

enum GPUType {
AMD : GPUType
INTEL : GPUType
NVIDIA : GPUType
GPUType()
}

enum GPUSeries {
RTX40 : GPUSeries
RTX30 : GPUSeries
RTX20 : GPUSeries
GTX10 : GPUSeries
RX7000 : GPUSeries
RX6000 : GPUSeries
RX5000 : GPUSeries
GPUSeries()
}

enum OrderStatus{
Complete : Status
Incomplete : Status
}

enum CPUSocket {
AM3 : CPUSocket
AM4 : CPUSocket
LGA1700 : CPUSocket
LGA1200 : CPUSocket
CPUSocket()
}
@enduml